2011-04-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	  Use the new views.
	* python/mushin/model/couch.py:
	  Remove last use of Server.db ?

2011-04-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/project.py:
	  Convert listing projects to using twisted, step 1.
	  Only user of server.load()
	* python/mushin/model/couch.py:
	  fromDict directly from the dict.

2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py (added):
	  Add a base class for twisted-using Command classes.
	  Should move upstream when done.

2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Use twisted command.
	* python/mushin/model/couch.py:
	  Fix delete.

2011-04-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Start using paisley to save docs.

2011-04-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/conflict.py:
	* python/mushin/command/list.py:
	* python/mushin/command/replicate.py:
	  Use self.stdout on the Displayers.
	* python/mushin/command/project.py:
	* python/mushin/common/parse.py:
	* python/mushin/command/main.py:
	  Switch interpreter to the manholecmd one.
	  Various fixes.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Remove last prints.  Pass stdout to Displayer.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	  Use a proper stdout you can pass to display things.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	* python/mushin/command/thing.py:
	  Use self.stdout.write instead of print for commands.

2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/things-by-id-reversed/map.js: